3.0.1-stable (2013-??-??)
	* Fixed: URI properties should not escape ; and ,.
	* Fixed: VCard 4 documents now correctly use URI as a default value-type
	  for PHOTO and others. BINARY no longer exists in vCard 4.
	* Added: Utility to convert 3.0 vcards to 4.0.

3.0.0-stable (2013-06-21)
	* Fixed: includes.php file was still broken. Our tool to generate it had
	  some bugs.

3.0.0-beta4 (2013-06-21)
	* Fixed: includes.php was no longer up to date.

3.0.0-beta3 (2013-06-17)
	* Added: OPTION_FORGIVING now also allows slashes in property names.
	* Fixed: DateTimeParser no longer fails on dates with years < 1000
	  & > 4999
	* Fixed: Issue 36: Workaround for the recurrenceiterator and caldav events
	  with a missing base event.
	* Fixed: jCard encoding of TIME properties.
	* Fixed: jCal encoding of REQUEST-STATUS, GEO and PERIOD values.

3.0.0-beta2 (2013-06-10)
	* Fixed: Corrected includes.php file.
	* Fixed: vCard date-time parser supported extended-format dates as well.
	* Changed: Properties have been moved to an ICalendar or VCard directory.
	* Fixed: Couldn't parse vCard 3 extended format dates and times.
	* Fixed: Couldn't export jCard DATE values correctly.
	* Fixed: Recursive loop in ICalendar\DateTime property.

3.0.0-beta1 (2013-06-07)
	* Added: jsonSerialize() for creating jCal and jCard documents.
	* Added: helper method to parse vCard dates and times.
	* Added: Specialized classes for FLOAT, LANGUAGE-TAG, TIME, TIMESTAMP,
	  DATE-AND-OR-TIME, CAL-ADDRESS, UNKNOWN and UTC-OFFSET properties.
	* Removed: CommaSeparatedText property. Now included into Text.
	* Fixed: Multiple parameters with the same name are now correctly encoded.
	* Fixed: Parameter values containing a comma are now enclosed in
	  double-quotes.
	* Fixed: Iterating parameter values should now fully work as expected.
	* Fixed: Support for vCard 2.1 nameless parameters.
	* Changed: $valueMap, $componentMap and $propertyMap now all use